--- a/SOURCES/restrictions.conf
+++ b/SOURCES/restrictions.conf
@@ -19,6 +19,10 @@ location ~ /\. {
 	access_log off;
 }
 
+location ^~ /.well-known/ {
+	try_files $uri $uri/ =404;
+}
+
 location /nginx_status {
 	stub_status on;
 	access_log off;
