--- a/SOURCES/blacklist.conf
+++ b/SOURCES/blacklist.conf
@@ -78,6 +78,7 @@ map $http_user_agent $bad_bot {
 	"~*discoverybot"	1;
 	"~*DittoSpyder"	1;
 	"~*DomainAppender"	1;
+	"~*DomainCrawler"	1;
 	"~*DomainSigmaCrawler"	1;
 	"~*dotbot"	1;
 	"~*Download\ Demon"	1;
@@ -198,6 +199,7 @@ map $http_user_agent $bad_bot {
 	"~*MarkWatch"	1;
 	"~*Mass\ Downloader"	1;
 	"~*Mata\ Hari"	1;
+	"~*MauiBot"	1;
 	"~*MegaIndex.ru"	1;
 	"~*Metauri"	1;
 	"~*Microsoft\ Data\ Access"	1;
