Restrictions cleanup and more FCGI params added by default.

--- a/SOURCES/nginx.conf
+++ b/SOURCES/nginx.conf
@@ -137,8 +137,11 @@ http {
 	fastcgi_buffers 8 256k;
 	fastcgi_buffer_size 256k;
 	fastcgi_busy_buffers_size 256k;
-
-	limit_req_zone $binary_remote_addr zone=wplogin:10m rate=10r/m;
+	fastcgi_index index.php;
+	include fastcgi_params;
+	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	
+	limit_req_zone $binary_remote_addr zone=wplogin:50m rate=10r/m;
 
 	upstream php {
 		server 127.0.0.1:9000;
