--- a/SOURCES/restrictions.conf
+++ b/SOURCES/restrictions.conf
@@ -1,9 +1,4 @@
-location = /favicon.ico {
-	log_not_found off;
-	access_log off;
-}
-
-location = /favicon.png {
+location ~ ^/(favicon|apple-touch-icon|browserconfig|mstile)(.*)\.(png|xml|ico)$ {
 	log_not_found off;
 	access_log off;
 }
@@ -26,25 +21,21 @@ location ^~ /.well-known/ {
 location /nginx_status {
 	stub_status on;
 	access_log off;
-	include conf.d/custom/admin-ips.conf;
-	deny all;
+	include conf.d/custom/admin-ips.conf; deny all;
 }
 
 location /traffic_status {
 	vhost_traffic_status_display;
 	vhost_traffic_status_display_format html;
 	access_log off;
-	include conf.d/custom/admin-ips.conf;
-	deny all;
+	include conf.d/custom/admin-ips.conf; deny all;
+	
 }
 
 location ~ ^/(status|ping)$ {
-	include fastcgi_params;
-	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	fastcgi_pass php;
-	include conf.d/custom/admin-ips.conf;
 	access_log off;
-	deny all;
+	include conf.d/custom/admin-ips.conf; deny all;
 }
 
 location = /wp-login.php {
@@ -55,7 +46,5 @@ location = /wp-login.php {
 	log_not_found off;
 	try_files $uri =404;
 	fastcgi_split_path_info ^(.+\.php)(/.+)$;
-	include fastcgi_params;
-	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	fastcgi_pass php;
 }
