--- a/SOURCES/nginx.conf
+++ b/SOURCES/nginx.conf
@@ -113,7 +113,8 @@ http {
 	pagespeed UsePerVhostStatistics on;
 	pagespeed FetchHttps enable;
 	pagespeed FetchHttps enable,allow_self_signed;
-	pagespeed SslCertDirectory /etc/ssl/certs;	
+	pagespeed SslCertDirectory /etc/pki/tls/certs;
+	pagespeed SslCertFile /etc/pki/tls/cert.pem;
 	pagespeed EnableCachePurge on;
 	pagespeed InPlaceResourceOptimization on;
 	
