Disable Brotli for module VTS as it may cause blank status page.

--- a/SOURCES/restrictions-users.conf
+++ b/SOURCES/restrictions-users.conf
@@ -27,6 +27,7 @@ location /nginx_status {
 location /traffic_status {
 	vhost_traffic_status_display;
 	vhost_traffic_status_display_format html;
+	brotli off;
 	access_log off;
 	include conf.d/custom/admin-ips.conf; deny all;
 	
