Add expire on woff2 files.

--- a/SOURCES/fpm-drupal.conf
+++ b/SOURCES/fpm-drupal.conf
@@ -6,7 +6,7 @@ location @rewrite {
 	rewrite ^/(.*)$ /index.php?q=$1;
 }
 
-location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff)$ {
+location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff|woff2)$ {
 	expires 2w;
 	log_not_found off;
 }
