--- a/SOURCES/fpm-wordpress-cache.conf
+++ b/SOURCES/fpm-wordpress-cache.conf
@@ -23,7 +23,7 @@ location / {
 	try_files $uri $uri/ /index.php?$args;
 }
 
-location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff)$ {
+location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff|woff2)$ {
 	expires 2w;
 	log_not_found off;
 }
