--- a/SOURCES/fpm-opencart.conf
+++ b/SOURCES/fpm-opencart.conf
@@ -20,7 +20,7 @@ location /image/data {
 	autoindex on;
 }
 
-location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff)$ {
+location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff|woff2)$ {
 	expires 2w;
 	log_not_found off;
 }
