--- a/SOURCES/fpm-sendy.conf
+++ b/SOURCES/fpm-sendy.conf
@@ -4,7 +4,7 @@ location / {
 	try_files $uri $uri/ $uri.php?$args;
 }
 
-location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff)$ {
+location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff|woff2)$ {
 	expires 2w;
 	log_not_found off;
 }
