Add caching php-fpm option (20 minutes) for all WordPress configurations.

--- a/SOURCES/fpm-wordpress-mu-users.conf
+++ b/SOURCES/fpm-wordpress-mu-users.conf
@@ -24,6 +24,12 @@ location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff|
 	log_not_found off;
 }
 
+location ~* \.(?:css|js)$ {
+	expires 1w;
+	add_header Pragma public;
+	add_header Cache-Control "public";
+}
+
 location ~ ^/files/(.*)$ {
 	try_files /wp-content/blogs.dir/$blogid/$uri /wp-includes/ms-files.php?file=$1 ;
 	access_log off; log_not_found off; expires max;
