--- a/SOURCES/fpm-wordpress-sub-cache-users.conf
+++ b/SOURCES/fpm-wordpress-sub-cache-users.conf
@@ -22,14 +22,25 @@ location ~ /purge(/.*) {
 	include conf.d/custom/admin-ips.conf; deny all;
 }
 
-location / {
+if (!-e $request_filename) {
 	rewrite /wp-admin$ $scheme://$host$uri/ permanent;
+	rewrite ^(/[^/]+)?(/wp-.*) $2 last;
+	rewrite ^(/[^/]+)?(/.*\.php) $2 last;
+}
+
+location / {
 	try_files $uri $uri/ /index.php?$args;
 }
 
 location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff|woff2)$ {
 	expires 2w;
 	log_not_found off;
+}
+
+location ~* \.(?:css|js)$ {
+	expires 1w;
+	add_header Pragma public;
+	add_header Cache-Control "public";
 }
 
 location ~ \.php$ {
@@ -42,7 +53,7 @@ location ~ \.php$ {
 	include fastcgi_params;
 	fastcgi_index index.php;
 	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	fastcgi_pass php;
+	fastcgi_pass unix:/run/php-fpm/$fpmuser.sock;
 	fastcgi_cache_bypass $skip_cache;
 	fastcgi_no_cache $skip_cache;
 	fastcgi_cache FCGICACHE;
