--- a/SOURCES/fpm-wordpress-sub-cache.conf
+++ b/SOURCES/fpm-wordpress-sub-cache.conf
@@ -22,14 +22,25 @@ location ~ /purge(/.*) {
 	include conf.d/custom/admin-ips.conf; deny all;
 }
 
-location / {
+if (!-e $request_filename) {
 	rewrite /wp-admin$ $scheme://$host$uri/ permanent;
+	rewrite ^(/[^/]+)?(/wp-.*) $2 last;
+	rewrite ^(/[^/]+)?(/.*\.php) $2 last;
+}
+
+location / {
 	try_files $uri $uri/ /index.php?$args;
 }
 
 location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff|woff2)$ {
 	expires 2w;
 	log_not_found off;
+}
+
+location ~* \.(?:css|js)$ {
+	expires 1w;
+	add_header Pragma public;
+	add_header Cache-Control "public";
 }
 
 location ~ \.php$ {
