--- a/SOURCES/fpm-wordpress-sub-users.conf
+++ b/SOURCES/fpm-wordpress-sub-users.conf
@@ -1,5 +1,10 @@
+if (!-e $request_filename) {
+	rewrite /wp-admin$ $scheme://$host$uri/ permanent;
+	rewrite ^(/[^/]+)?(/wp-.*) $2 last;
+	rewrite ^(/[^/]+)?(/.*\.php) $2 last;
+}
+
 location / {
-	rewrite ^/(.*)/$ /$1 permanent;
 	try_files $uri $uri/ /index.php?$args;
 }
 
