--- a/SOURCES/fpm-wordpress-cache-users.conf
+++ b/SOURCES/fpm-wordpress-cache-users.conf
@@ -32,6 +32,12 @@ location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff|
 	log_not_found off;
 }
 
+location ~* \.(?:css|js)$ {
+	expires 1w;
+	add_header Pragma public;
+	add_header Cache-Control "public";
+}
+
 location ~ \.php$ {
 	try_files $uri =404;
 	fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -42,7 +48,7 @@ location ~ \.php$ {
 	include fastcgi_params;
 	fastcgi_index index.php;
 	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	fastcgi_pass php;
+	fastcgi_pass unix:/run/php-fpm/$fpmuser.sock;
 	fastcgi_cache_bypass $skip_cache;
 	fastcgi_no_cache $skip_cache;
 	fastcgi_cache FCGICACHE;
