--- a/SOURCES/fpm-wordpress-mu-cache-users.conf
+++ b/SOURCES/fpm-wordpress-mu-cache-users.conf
@@ -4,6 +4,30 @@
 ## https://wordpress.org/plugins/nginx-helper/
 ##
 
+add_header X-Cache $upstream_cache_status;
+
+set $skip_cache 0;
+
+if ($request_method = POST) {
+	set $skip_cache 1;
+}   
+if ($query_string != "") {
+	set $skip_cache 1;
+}   
+
+if ($request_uri ~* "/wp-admin/|/xmlrpc.php|wp-.*.php|/feed/|index.php|sitemap(_index)?.xml") {
+	set $skip_cache 1;
+}   
+
+if ($http_cookie ~* "comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpress_no_cache|wordpress_logged_in") {
+	set $skip_cache 1;
+}
+
+location ~ /purge(/.*) {
+	fastcgi_cache_purge FCGICACHE "$scheme$request_method$host$1";
+	include conf.d/custom/admin-ips.conf; deny all;
+}
+
 if (!-e $request_filename) {
 	rewrite /wp-admin$ $scheme://$host$uri/ permanent;
 	rewrite ^/[_0-9a-zA-Z-]+(/wp-.*) $1 last;
@@ -51,5 +75,10 @@ location ~ \.php$ {
 	include fastcgi_params;
 	fastcgi_index index.php;
 	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	fastcgi_pass php;
+	fastcgi_pass unix:/run/php-fpm/$fpmuser.sock;
+	fastcgi_cache_bypass $skip_cache;
+	fastcgi_no_cache $skip_cache;
+	fastcgi_cache FCGICACHE;
+	fastcgi_cache_valid 200 301 302 20m;
+	fastcgi_cache_valid any 1m;
 }
