--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,14 @@ services:
   - docker
 
 before_install:
-  - docker pull centos:7
-  - docker build --no-cache --rm --file=.travis/Dockerfile --tag=${distribution}:buildrpm .travis
+  - docker pull karljohns0n/rpmbuild:7
 
 script:
   - nginx_version=$(grep "Version:" SPECS/nginx-more.spec|awk '{print $2}' )
   - nginx_release=$(grep "Release:" SPECS/nginx-more.spec|awk '{print $2}'| tr -d "%{?dist}")
   - container_id=$(mktemp)
 
-  - docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/nginx-more centos:buildrpm > "${container_id}"
+  - docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/nginx-more karljohns0n/rpmbuild:7 > "${container_id}"
   - docker exec "$(cat ${container_id})" mkdir -p /tmp/nginx-more/{BUILD,RPMS,SPECS,SOURCES,SRPMS}
   - docker exec "$(cat ${container_id})" sh /tmp/nginx-more/.travis/fetch_sources.sh ${CDNURL}
   - docker exec "$(cat ${container_id})" mock --old-chroot -r aeris-${version}-x86_64 --spec=/tmp/nginx-more/SPECS/nginx-more.spec --sources=/tmp/nginx-more/SOURCES --resultdir=/tmp/nginx-more/SRPMS --buildsrpm
