--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,15 @@ before_install:
   - docker pull karljohns0n/rpmbuild:7
 
 script:
-  - nginx_version=$(grep "Version:" SPECS/nginx-more.spec|awk '{print $2}' )
-  - nginx_release=$(grep "Release:" SPECS/nginx-more.spec|awk '{print $2}'| tr -d "%{?dist}")
+  - pkg_name=nginx-more
+  - pkg_version=$(grep "Version:" SPECS/${pkg_name}.spec|awk '{print $2}' )
+  - pkg_release=$(grep "Release:" SPECS/${pkg_name}.spec|awk '{print $2}'| tr -d "%{?dist}")
   - container_id=$(mktemp)
 
-  - docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/nginx-more karljohns0n/rpmbuild:7 > "${container_id}"
-  - docker exec "$(cat ${container_id})" mkdir -p /tmp/nginx-more/{BUILD,RPMS,SPECS,SOURCES,SRPMS}
-  - docker exec "$(cat ${container_id})" sh /tmp/nginx-more/.travis/fetch_sources.sh ${CDNURL}
-  - docker exec "$(cat ${container_id})" mock --old-chroot -r aeris-${version}-x86_64 --spec=/tmp/nginx-more/SPECS/nginx-more.spec --sources=/tmp/nginx-more/SOURCES --resultdir=/tmp/nginx-more/SRPMS --buildsrpm
-  - docker exec "$(cat ${container_id})" mock --old-chroot --clean -D "dist .el${version}" -r aeris-${version}-x86_64 --resultdir=/tmp/nginx-more/RPMS --rebuild /tmp/nginx-more/SRPMS/nginx-more-${nginx_version}-${nginx_release}.el${version}.src.rpm
-  - docker exec "$(cat ${container_id})" rpm -q -l -p /tmp/nginx-more/RPMS/nginx-more-${nginx_version}-${nginx_release}.el${version}.x86_64.rpm
+  - docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" karljohns0n/rpmbuild:7 > "${container_id}"
+  - docker exec "$(cat ${container_id})" mkdir -p /tmp/"${pkg_name}"/{BUILD,RPMS,SPECS,SOURCES,SRPMS}
+  - docker exec "$(cat ${container_id})" sh /tmp/"${pkg_name}"/.travis/fetch_sources.sh "${CDNURL}"
+  - docker exec "$(cat ${container_id})" mock --old-chroot -r aeris-"${version}"-x86_64 --spec=/tmp/"${pkg_name}"/SPECS/"${pkg_name}".spec --sources=/tmp/"${pkg_name}"/SOURCES --resultdir=/tmp/"${pkg_name}"/SRPMS --buildsrpm
+  - docker exec "$(cat ${container_id})" mock --old-chroot --clean -D "dist .el${version}" -r aeris-"${version}"-x86_64 --resultdir=/tmp/"${pkg_name}"/RPMS --rebuild /tmp/"${pkg_name}"/SRPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}".src.rpm
+  - docker exec "$(cat ${container_id})" rpm -q -l -p /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}".x86_64.rpm
   - docker rm -f "$(cat ${container_id})"
