CentOS 8 support. Refactoring. ModSecurity as dynamic module.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,13 @@ language: shell
 env:
   - distribution: centos
     version: 6
+    ngx_modules: "--without=modsecurity"
   - distribution: centos
     version: 7
+    ngx_modules: "--with=modsecurity"
+  - distribution: centos
+    version: 8
+    ngx_modules: "--with=modsecurity"
 
 services:
   - docker
@@ -25,9 +30,9 @@ script:
   - docker run --name "${container_id}" --detach --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" karljohns0n/rpmbuild:8
   - docker exec "${container_id}" mkdir -p /tmp/"${pkg_name}"/{BUILD,RPMS,SPECS,SOURCES,SRPMS}
   - docker exec "${container_id}" sh /tmp/"${pkg_name}"/.travis/fetch_sources.sh "${CDNURL}"
-  - docker exec "${container_id}" mock --old-chroot -r aeris-"${version}"-x86_64 --spec=/tmp/"${pkg_name}"/SPECS/"${pkg_name}".spec --sources=/tmp/"${pkg_name}"/SOURCES --resultdir=/tmp/"${pkg_name}"/SRPMS --buildsrpm
-  - docker exec "${container_id}" mock --old-chroot --clean -D "dist .el${version}" -r aeris-"${version}"-x86_64 --resultdir=/tmp/"${pkg_name}"/RPMS --rebuild /tmp/"${pkg_name}"/SRPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}".src.rpm
-  - docker exec "${container_id}" rpm -q -l -p /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}"."${pkg_arch}".rpm
+  - docker exec "${container_id}" mock --old-chroot -r aeris-"${version}"-x86_64 --spec=/tmp/"${pkg_name}"/SPECS/"${pkg_name}".spec --sources=/tmp/"${pkg_name}"/SOURCES --resultdir=/tmp/"${pkg_name}"/SRPMS --buildsrpm "${ngx_modules}"
+  - docker exec "${container_id}" mock --old-chroot --clean -D "dist .el${version}" -r aeris-"${version}"-x86_64 --resultdir=/tmp/"${pkg_name}"/RPMS --rebuild /tmp/"${pkg_name}"/SRPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}".src.rpm "${ngx_modules}"
+  - docker exec "${container_id}" rpm -q -l -p /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}"."${pkg_arch}".rpm --noartifact
   - docker rm -f "${container_id}"
 
   # Test package
@@ -38,4 +43,5 @@ script:
   - docker exec "${container_id}" /usr/sbin/nginx && sleep 5
   - docker exec "${container_id}" curl -s -I http://127.0.0.1
   - docker exec "${container_id}" cat /var/log/nginx/error.log
+  - docker exec "${container_id}" yum remove -y nginx-more
   - docker rm -f "${container_id}"
