--- a/SOURCES/nginx.conf
+++ b/SOURCES/nginx.conf
@@ -5,6 +5,8 @@ worker_rlimit_nofile 8192;
 error_log /var/log/nginx/error.log notice;
 pid /var/run/nginx.pid;
 
+include /usr/share/nginx/modules/*.conf;
+
 events {
 	worker_connections 1024;
 	use epoll;
