--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@
 language: shell
 
 env:
-  - distribution: centos
+  - dist: centos
     version: 6
     ngx_modules: "--without=modsecurity"
-  - distribution: centos
+  - dist: centos
     version: 7
     ngx_modules: "--with=modsecurity"
-  - distribution: centos
+  - dist: centos
     version: 8
     ngx_modules: "--with=modsecurity"
 
@@ -17,7 +17,7 @@ services:
 
 before_install:
   - docker pull karljohns0n/rpmbuild:8
-  - docker pull karljohns0n/centos:"${version}"
+  - docker pull centos:"${version}"
 
 script:
   - pkg_name=nginx-more
@@ -36,8 +36,9 @@ script:
   - docker rm -f "${container_id}"
 
   # Test package
-  - docker run --name "${container_id}" --detach --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" karljohns0n/centos:"${version}"
-  - docker exec "${container_id}" yum install --enablerepo="aeris,aeris-testing" -y /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}"."${pkg_arch}".rpm
+  - docker run --name "${container_id}" -t --detach --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" centos:"${version}"
+  - docker exec "${container_id}" yum install -y https://repo.aerisnetwork.com/pub/aeris-release-"${version}".rpm
+  - docker exec "${container_id}" yum install -y --enablerepo="aeris,aeris-testing" /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}"."${pkg_arch}".rpm
   - docker exec "${container_id}" nginx -V
   - docker exec "${container_id}" /usr/sbin/nginx -t
   - docker exec "${container_id}" /usr/sbin/nginx && sleep 5
