Language typo. Adjust assets caching.

--- a/SOURCES/fpm-prestashop.conf
+++ b/SOURCES/fpm-prestashop.conf
@@ -15,9 +15,14 @@ location / {
 	try_files $uri $uri/ /index.php?$args;
 }
 
+location ~* \.(?:cur|gif|gz|htc|ico|jpeg|jpg|mp4|ogg|ogv|png|svg|svgz|ttf|webm|woff|woff2)$ {
+	expires 2w;
+	add_header Cache-Control "public";
+	log_not_found off;
+}
+
 location ~* \.(?:css|js)$ {
 	expires 1w;
-	add_header Pragma public;
 	add_header Cache-Control "public";
 }
 
