Skip cache on WooCommerce pages.

--- a/SOURCES/fpm-wordpress-sub-cache-users.conf
+++ b/SOURCES/fpm-wordpress-sub-cache-users.conf
@@ -5,15 +5,24 @@ set $skip_cache 0;
 if ($request_method = POST) {
 	set $skip_cache 1;
 }   
+
 if ($query_string != "") {
 	set $skip_cache 1;
-}   
+}
 
 if ($request_uri ~* "/wp-admin/|/xmlrpc.php|wp-.*.php|/feed/|index.php|sitemap(_index)?.xml") {
 	set $skip_cache 1;
-}   
+}
+
+if ($request_uri ~* "/store.*|/cart.*|/my-account.*|/checkout.*|/addons.*") {
+	set $skip_cache 1;
+}
 
 if ($http_cookie ~* "comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpress_no_cache|wordpress_logged_in") {
+	set $skip_cache 1;
+}
+
+if ( $cookie_woocommerce_items_in_cart != "0" ) { 
 	set $skip_cache 1;
 }
 
