CentOS 6 docker image is EOL, disable for now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@
 language: shell
 
 env:
-  - dist: centos
-    version: 6
-    ngx_modules: "--without=modsecurity"
+#  - dist: centos
+#    version: 6
+#    ngx_modules: "--without=modsecurity"
   - dist: centos
     version: 7
     ngx_modules: "--with=modsecurity"
