Add xmlrpc.php to brute force protection.

--- a/SOURCES/restrictions-users.conf
+++ b/SOURCES/restrictions-users.conf
@@ -39,8 +39,8 @@ location ~ ^/(status|ping)$ {
 	include conf.d/custom/admin-ips.conf; deny all;
 }
 
-location = /wp-login.php {
-	limit_req zone=wplogin burst=1 nodelay;
+location ~ ^/(wp-login.php|xmlrpc.php)$ {
+	limit_req zone=wplogin burst=3 nodelay;
 	limit_req_status 444;
 	error_log /dev/null crit; 
 	access_log off;
