--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@
 language: shell
 
 env:
-#  - dist: centos
-#    version: 6
-#    ngx_modules: "--without=modsecurity"
+  - dist: centos
+    version: 6
+    ngx_modules: "--without=modsecurity"
   - dist: centos
     version: 7
     ngx_modules: "--with=modsecurity"
@@ -17,7 +17,7 @@ services:
 
 before_install:
   - docker pull karljohns0n/rpmbuild:8
-  - docker pull centos:"${version}"
+  - docker pull karljohns0n/centos:"${version}"
 
 script:
   - pkg_name=nginx-more
@@ -36,7 +36,7 @@ script:
   - docker rm -f "${container_id}"
 
   # Test package
-  - docker run --name "${container_id}" -t --detach --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" centos:"${version}"
+  - docker run --name "${container_id}" -t --detach --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" karljohns0n/centos:"${version}"
   - docker exec "${container_id}" yum install -y https://repo.aerisnetwork.com/pub/aeris-release-"${version}".rpm
   - docker exec "${container_id}" yum install -y --enablerepo="aeris,aeris-testing" /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}"."${pkg_arch}".rpm
   - docker exec "${container_id}" nginx -V
