--- a/SOURCES/fpm-wordpress-mu-cache-users.conf
+++ b/SOURCES/fpm-wordpress-mu-cache-users.conf
@@ -28,7 +28,7 @@ if ($http_cookie ~* "comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpress_no
 	set $skip_cache 1;
 }
 
-if ( $cookie_woocommerce_items_in_cart != "0" ) { 
+if ( $cookie_woocommerce_items_in_cart ) { 
 	set $skip_cache 1;
 }
 
