--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,21 @@
 language: shell
 
 env:
-  - dist: centos
+  - dist: karljohns0n/centos
     version: 6
+    pkg_arch: x86_64
     ngx_modules: "--without=modsecurity"
   - dist: centos
     version: 7
+    pkg_arch: x86_64
     ngx_modules: "--with=modsecurity"
-  - dist: centos
+  - dist: almalinux
     version: 8
+    pkg_arch: x86_64
+    ngx_modules: "--with=modsecurity"
+  - dist: rockylinux/rockylinux
+    version: 8
+    pkg_arch: x86_64
     ngx_modules: "--with=modsecurity"
 
 services:
@@ -17,26 +24,26 @@ services:
 
 before_install:
   - docker pull karljohns0n/rpmbuild:8
-  - docker pull karljohns0n/centos:"${version}"
+  - docker pull "${dist}":"${version}"
 
 script:
   - pkg_name=nginx-more
-  - pkg_arch=x86_64
   - pkg_version=$(grep "Version:" SPECS/${pkg_name}.spec|awk '{print $2}' )
   - pkg_release=$(grep "Release:" SPECS/${pkg_name}.spec|awk '{print $2}'| tr -d "%{?dist}")
-  - container_id=$(cat /dev/urandom | env LC_CTYPE=C tr -dc 'a-zA-Z0-9' | fold -w 20 | head -n 1)
+  - container_id=$(cat /dev/urandom | env LC_ALL=C tr -dc 'a-zA-Z0-9' | fold -w 20 | head -n 1)
 
   # Build package
   - docker run --name "${container_id}" --detach --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" karljohns0n/rpmbuild:8
   - docker exec "${container_id}" mkdir -p /tmp/"${pkg_name}"/{BUILD,RPMS,SPECS,SOURCES,SRPMS}
   - docker exec "${container_id}" bash /tmp/"${pkg_name}"/.travis/fetch_sources.sh "${CDNURL}"
-  - travis_wait 30 docker exec "${container_id}" mock --isolation=simple -r aeris-"${version}"-x86_64 --spec=/tmp/"${pkg_name}"/SPECS/"${pkg_name}".spec --sources=/tmp/"${pkg_name}"/SOURCES --resultdir=/tmp/"${pkg_name}"/SRPMS --buildsrpm "${ngx_modules}"
-  - travis_wait 30 docker exec "${container_id}" mock --isolation=simple --clean -D "dist .el${version}" -r aeris-"${version}"-x86_64 --resultdir=/tmp/"${pkg_name}"/RPMS --rebuild /tmp/"${pkg_name}"/SRPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}".src.rpm "${ngx_modules}"
+  - travis_wait 30 docker exec "${container_id}" mock --isolation=simple -r aeris-"${version}"-"${pkg_arch}" --spec=/tmp/"${pkg_name}"/SPECS/"${pkg_name}".spec --sources=/tmp/"${pkg_name}"/SOURCES --resultdir=/tmp/"${pkg_name}"/SRPMS --buildsrpm "${ngx_modules}"
+  - travis_wait 30 docker exec "${container_id}" mock --isolation=simple --clean -D "dist .el${version}" -r aeris-"${version}"-"${pkg_arch}" --resultdir=/tmp/"${pkg_name}"/RPMS --rebuild /tmp/"${pkg_name}"/SRPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}".src.rpm "${ngx_modules}"
   - docker exec "${container_id}" rpm -q -l -p /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}"."${pkg_arch}".rpm --noartifact
   - docker rm -f "${container_id}"
 
   # Test package
-  - docker run --name "${container_id}" -t --detach --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" karljohns0n/centos:"${version}"
+  - docker run --name "${container_id}" -t --detach --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" "${dist}":"${version}"
+  - docker exec "${container_id}" yum -y install https://repo.aerisnetwork.com/pub/aeris-release-"${version}".rpm
   - docker exec "${container_id}" yum install -y --enablerepo="aeris,aeris-testing" /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}"."${pkg_arch}".rpm
   - docker exec "${container_id}" nginx -V
   - docker exec "${container_id}" /usr/sbin/nginx -t
