Disable CI for CentOS 6. Will still be supported tho.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@
 language: shell
 
 env:
-  - dist: karljohns0n/centos
-    version: 6
-    pkg_arch: x86_64
-    ngx_modules: "--without=modsecurity"
+#  - dist: karljohns0n/centos
+#    version: 6
+#    pkg_arch: x86_64
+#    ngx_modules: "--without=modsecurity"
   - dist: centos
     version: 7
     pkg_arch: x86_64
