--- a/SOURCES/nginx.pagespeed.conf
+++ b/SOURCES/nginx.pagespeed.conf
@@ -92,6 +92,33 @@ http {
 	index index.html index.php;
 	charset UTF-8;
 	ignore_invalid_headers on;
+
+	pagespeed off;
+	pagespeed FileCachePath /var/lib/nginx/cache/pagespeed;
+	pagespeed FileCacheSizeKb 204800;
+	pagespeed FileCacheCleanIntervalMs 3600000;
+	pagespeed FileCacheInodeLimit 100000;
+	pagespeed MemcachedThreads 1;
+	pagespeed MemcachedServers "localhost:11211";
+	pagespeed MemcachedTimeoutUs 100000;
+	pagespeed RewriteLevel CoreFilters;
+	pagespeed EnableFilters collapse_whitespace,remove_comments,extend_cache;
+	pagespeed DisableFilters combine_css,combine_javascript;
+	pagespeed LowercaseHtmlNames on;
+	pagespeed StatisticsPath /ngx_pagespeed_statistics;
+	pagespeed GlobalStatisticsPath /ngx_pagespeed_global_statistics;
+	pagespeed MessagesPath /ngx_pagespeed_message;
+	pagespeed ConsolePath /pagespeed_console;
+	pagespeed AdminPath /pagespeed_admin;
+	pagespeed GlobalAdminPath /pagespeed_global_admin;
+	pagespeed MessageBufferSize 100000;
+	pagespeed UsePerVhostStatistics on;
+	pagespeed FetchHttps enable;
+	pagespeed FetchHttps enable,allow_self_signed;
+	pagespeed SslCertDirectory /etc/pki/tls/certs;
+	pagespeed SslCertFile /etc/pki/tls/cert.pem;
+	pagespeed EnableCachePurge on;
+	pagespeed InPlaceResourceOptimization on;
 	
 	proxy_cache_path /var/lib/nginx/cache/proxy levels=1:2 keys_zone=PROXYCACHE:100m max_size=200m inactive=60m;
 	proxy_temp_path /var/lib/nginx/cache/proxy_tmp;
@@ -117,7 +144,7 @@ http {
 	fastcgi_busy_buffers_size 256k;
 	fastcgi_index index.php;
 	include fastcgi_params;
-	fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	
 	limit_req_zone $binary_remote_addr zone=wplogin:50m rate=20r/m;
 
@@ -135,6 +162,7 @@ http {
 		server_name_in_redirect off;
 
 		include conf.d/custom/restrictions.conf;
+		#include conf.d/custom/pagespeed.conf;
 		include conf.d/custom/fpm-default.conf;
 	}
 
