--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,9 +56,9 @@ jobs:
       - name: Build el${{ matrix.VERSION }} package using mock
         uses: addnab/docker-run-action@v3
         with:
-          image: karljohns0n/rpmbuild:8
+          image: karljohns0n/rpmbuild:9
           shell: bash
-          options: -v ${{ github.workspace }}:/tmp/${{ env.PKG_NAME }} -v /sys/fs/cgroup:/sys/fs/cgroup:ro --privileged
+          options: -v ${{ github.workspace }}:/tmp/${{ env.PKG_NAME }} -v /sys/fs/cgroup:/sys/fs/cgroup:rw --privileged
           run: |
               set -x -e
               cd tmp/"${{ env.PKG_NAME }}"
@@ -66,7 +66,7 @@ jobs:
               PKG_RELEASE=$(grep "Release:" SPECS/${{ env.PKG_NAME }}.spec|awk '{print $2}'| tr -d "%{?dist}")
 
               mkdir -p /tmp/"${{ env.PKG_NAME }}"/{BUILD,RPMS,SPECS,SOURCES,SRPMS}
-              spectool -C /tmp/"${{ env.PKG_NAME }}"/SOURCES/ -g <(rpmspec -P /tmp/"${{ env.PKG_NAME }}"/SPECS/"${{ env.PKG_NAME }}".spec)
+              spectool -g /tmp/"${{ env.PKG_NAME }}"/SPECS/"${{ env.PKG_NAME }}".spec -C /tmp/"${{ env.PKG_NAME }}"/SOURCES/
               mock --isolation=simple -r aeris-"${{ matrix.VERSION }}"-"${{ matrix.PKG_ARCH }}" --spec=/tmp/"${{ env.PKG_NAME }}"/SPECS/"${{ env.PKG_NAME }}".spec --sources=/tmp/"${{ env.PKG_NAME }}"/SOURCES --resultdir=/tmp/"${{ env.PKG_NAME }}"/SRPMS --buildsrpm ${{ matrix.OPT }}
               mock --isolation=simple --clean -D "dist .el${{ matrix.VERSION }}" -r aeris-"${{ matrix.VERSION }}"-"${{ matrix.PKG_ARCH }}" --resultdir=/tmp/"${{ env.PKG_NAME }}"/RPMS --rebuild /tmp/"${{ env.PKG_NAME }}"/SRPMS/"${{ env.PKG_NAME }}"-"${PKG_VERSION}"-"${PKG_RELEASE}".el"${{ matrix.VERSION }}".src.rpm ${{ matrix.OPT }}
               rpm -q -l -p /tmp/"${{ env.PKG_NAME }}"/RPMS/"${{ env.PKG_NAME }}"-"${PKG_VERSION}"-"${PKG_RELEASE}".el"${{ matrix.VERSION }}"."${{ matrix.PKG_ARCH }}".rpm --noartifact
@@ -75,7 +75,7 @@ jobs:
         with:
           image: ${{ matrix.OS }}:${{ matrix.VERSION }}
           shell: bash
-          options: -v ${{ github.workspace }}:/tmp/${{ env.PKG_NAME }} -v /sys/fs/cgroup:/sys/fs/cgroup:ro --privileged
+          options: -v ${{ github.workspace }}:/tmp/${{ env.PKG_NAME }} -v /sys/fs/cgroup:/sys/fs/cgroup:rw --privileged
           run: |
               set -x -e
               cd tmp/"${{ env.PKG_NAME }}"
